[build][java] JDK17 fixes
Upgrading Hive to JDK17 compatible version
Test error fixes

Change-Id: Iea8b99c34dd68860328728a6804025252a04d4da
(cherry picked from commit f26177f8bf7ac2b2fc4a6fb60cbac222a6b9b84a)